--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,14 +1,19 @@
 
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li><%= bookmark %></li>
+    <li>
+    <a href="<%= bookmark.url %>">
+      <%= bookmark.title %>
+    </a>
+    </li>
   <% end %>
 </ul>
 
- <h1> <%= @new %></h1>
+ <h1> <%= @new %> </h1>
 
 <h1> Want to add another bookmark? </h1>
 <form action='/new' method='post'>
-Add bookmark: <input type='text' name='url' >
+<input type='text' name='title' placeholder='Title'> 
+<input type='text' name='url' placeholder ='URL'>
 <input type='submit' value='Create'>
 </form>
