C13 - Deleting Feature added

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,10 +1,14 @@
 
 <ul>
   <% @bookmarks.each do |bookmark| %>
-    <li>
-    <a href="<%= bookmark.url %>">
+    <li class="bookmark" id="bookmark-<%= bookmark.id %>">
+    <a href="<%= bookmark.url %>" target="_blank">
       <%= bookmark.title %>
     </a>
+    <form action="/bookmarks/<%= bookmark.id %>" method="post">
+        <input type='hidden' name='_method' value='DELETE'/>
+    <input type="submit" value="Delete" />
+    </form>
     </li>
   <% end %>
 </ul>
@@ -16,4 +20,5 @@
 <input type='text' name='title' placeholder='Title'> 
 <input type='text' name='url' placeholder ='URL'>
 <input type='submit' value='Create'>
+<input type='submit' value='Delete'>
 </form>
